--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 	<link rel="stylesheet" href="styles/main.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -144,6 +144,8 @@
 		<p id="my-footer ">&copy; 2018 by Tommy Garcia and Raul Ortega</p>
 	</footer>
 
+	<!-- All the scripts down here -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="scripts/main.js "></script>
 
 </body>
