--- a/portfolio.html
+++ b/portfolio.html
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
 	<link rel="stylesheet" href="styles/main.css">
+	<link rel="icon" href="images/camera-f.png">
 
 </head>
 
